--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -3,7 +3,7 @@
 <head>
   <title>Tarea HTML de [Jhoan Hernandez]</title>
   
- <link rel="stylesheet" href="styles.css">
+ <link rel="stylesheet" href="./styles.css">
 
 </head>
 <body>
@@ -23,10 +23,9 @@
 	</div>
 	<div id = "thirdDiv">
 		<ul>
-			<h2>Papa</h2>
-			<img src="https://static.vix.com/es/sites/default/files/styles/4x3/public/imj/otramedicina/p/papa.jpg" />
-			<h2>Cilantro</h2>
-			 <img src="https://estaticos-cdn.elperiodico.com/clip/56122838-4952-44a5-840c-3f4ce4fb5fee_alta-libre-aspect-ratio_default_0.jpg">
+			
+			<li><img src="https://static.vix.com/es/sites/default/files/styles/4x3/public/imj/otramedicina/p/papa.jpg" /></li>
+			<li><img src="https://estaticos-cdn.elperiodico.com/clip/56122838-4952-44a5-840c-3f4ce4fb5fee_alta-libre-aspect-ratio_default_0.jpg"></li>
 
 		</ul>
 	</div>
